# Mario

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json  团队协作PR规范.md  接口文档.md
.github/workflows/: ci.yml  deploy.yml
assets/map/: map1.txt
assets/picture/mario/地图/: 1-1.tmx  map.tsx
map/: map1.txt  map2.txt
src/: CMakeLists.txt  main.cpp  precompile.h
src/app/: App.cpp  App.h  app.cpp  app.h
src/common/: CommandParameter.h  EventId.h  EventTrigger.cpp  EventTrigger.h  ICommand.h  Type.h
src/model/: Coin.h  Enemy.h  GameModel.cpp  GameModel.h  Mario.cpp  Mario.h  Mushroom.h  PhysicsConfig.h  RenderSnapshot.h  Tile.h  TileMap.cpp  TileMap.h
src/view/: AssetManager.h  EntityRenderer.h  SimpleRenderer.cpp  SimpleRenderer.h  View.cpp  View.h  ViewInteraction.cpp  ViewInteraction.h
src/view/audio/: AudioManager.cpp  AudioManager.h
src/view/input/: InputHandler.cpp  InputHandler.h
src/view/renderer/: AssetManager.h  GameRenderer.cpp  GameRenderer.h
src/viewmodel/: GameCommands.h  ViewModel.cpp  ViewModel.h
src/viewmodel/command/: Commands.cpp  Commands.h
tests/: CMakeLists.txt
tests/common/: EventTriggerTest.cpp  TestHelpers.h
tests/model/: EnemyTest.cpp  GameModelTest.cpp  MarioTest.cpp  TileMapTest.cpp
tests/view/: AudioManagerTest.cpp  InputHandlerTest.cpp  ViewInteractionTest.cpp
tools/: AutoPlayDemo.cpp  InputIntegrationWindow.cpp
